fixing table vertical align and renaming home button.

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,11 @@ body {
   text-align: left;
   width: 100%;
 }
+
+.synoptic-reports td {
+  vertical-align: top;
+}
+
 .synoptic-reports td, th {
   padding: 1px;
 }
